--- a/glass/glass/Resources.resx
+++ b/glass/glass/Resources.resx
@@ -121,7 +121,7 @@
   <data name="button" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAIAAAABACAIAAABdtOgoAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAACxAAAAsQAa0jvXUAAAAHdElNRQfaCwgNDghVlbr4AAAAGXRFWHRDb21tZW50AENy
+        YQUAAAAJcEhZcwAACw8AAAsPAZL5A6UAAAAHdElNRQfaCwgNDghVlbr4AAAAGXRFWHRDb21tZW50AENy
         ZWF0ZWQgd2l0aCBHSU1QV4EOFwAAAnBJREFUeF7tnOluwzAMg/v+L70rxZANiUWLuhyrfyeR0kfnKArs
         9fL8fPRHIuCJ/6+2NMmmf48L4HDaFPP92tEBXPrtnEqJAM5D7BZGuQB2u1N935SLhnAz1vkSGUx+lPGr
         eV+R6wXAM1Uo+MXQAaBxOGXQAaABOL1DswH8nouJPVYuNb8OWBj/BmLlVui3zYDdeDANK121v1AA4ChV
@@ -139,7 +139,7 @@
   <data name="exit" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAACxEAAAsRAX9kX5EAAAAHdElNRQfaCwgQKySbQDbfAAAAGXRFWHRDb21tZW50AENy
+        YQUAAAAJcEhZcwAACxAAAAsQAa0jvXUAAAAHdElNRQfaCwgQKySbQDbfAAAAGXRFWHRDb21tZW50AENy
         ZWF0ZWQgd2l0aCBHSU1QV4EOFwAAAPtJREFUWEfNl8EOwyAMQ/n/n2artlajEPLsIo1DtcOI/domhpZa
         a/nn9TEv75/7tRos8IgBjoJVECPzr/4cYAVEZI4BnkDMzCUAByIzbwCiRnQbE5ofPdaOoFAYNqio0WeA
         KNCAGLXjEDKEhlkCXmGcggqEsvaWLfMYJsJkzSTQ8n2AGCRhM0vUHICOqLmfMAAHAu4jHECBgOZ9EGWF
@@ -150,7 +150,7 @@
   <data name="new_user" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAANwAAAClCAYAAAA3d5OIAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAACxEAAAsRAX9kX5EAAAAHdElNRQfaCwgRKjHuRIlCAAAAGXRFWHRDb21tZW50AENy
+        YQUAAAAJcEhZcwAACxAAAAsQAa0jvXUAAAAHdElNRQfaCwgRKjHuRIlCAAAAGXRFWHRDb21tZW50AENy
         ZWF0ZWQgd2l0aCBHSU1QV4EOFwAAD2VJREFUeF7tnUtsTV8bxtu/a4u2KFWUKKGtoHHpJdQtvWjrUveW
         Um31ou6MJKZGZhibMTJgQkyIRCKGQiLiGgaIgQjiEqzP08/57H+/7nP22pe119r7OclJmvScvfd59/Nb
         z7vX5V1px48fF3wzBtSAGg2kMdBqAs04M87QAIGjwzPDUagBAqcw2HQ5uhyBI3B0OIUaIHAKg02Ho8MR
@@ -223,7 +223,7 @@
   <data name="down" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAEAAAABACAYAAACqaXHeAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAACxIAAAsSAdLdfvwAAAAGYktHRACAAAAAAEilC+0AAAAHdElNRQfaCw0XITBJ5Oyf
+        YQUAAAAJcEhZcwAACxEAAAsRAX9kX5EAAAAGYktHRACAAAAAAEilC+0AAAAHdElNRQfaCw0XITBJ5Oyf
         AAAAGXRFWHRDb21tZW50AENyZWF0ZWQgd2l0aCBHSU1QV4EOFwAAD/tJREFUeF7lm3eMXNUVxgdMM0X0
         XkXv9Q8L0YtAdBBdQogqIbooBgkhTCAhFBMSQsAQsEOCCYRggykhBBuDbYqNGzbYsYHYBmy8rruuW96X
         7zf3XjOzO7M7M7uWN8pIRzM789695zv9nPs2l1vNrz65XI8Hc7mdH8jlTvlFLtfbNNA0zlRnkqkpfuY7
@@ -299,7 +299,7 @@
   <data name="up" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAEAAAABACAYAAACqaXHeAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAACxIAAAsSAdLdfvwAAAAGYktHRACAAAAAAEilC+0AAAAHdElNRQfaCw0XISUkOQh0
+        YQUAAAAJcEhZcwAACxEAAAsRAX9kX5EAAAAGYktHRACAAAAAAEilC+0AAAAHdElNRQfaCw0XISUkOQh0
         AAAAGXRFWHRDb21tZW50AENyZWF0ZWQgd2l0aCBHSU1QV4EOFwAAD+dJREFUeF7lm3eMXNUVxgdMM0X0
         XkXv9Q8L0YuM6CC6hBBVQnRRDBJCmEBCKCYkxAFDwA4JJhCCDaaEEGwMtik2bthgxwZiG7Dxuu66bZn3
         5fu9d6+Z2d3ZmdkdZy1lpaOZnXnv3vOdfs59k8ut4b++uVyPh3K5XR/M5Xr/IpfrYxpsmmCqM8nUHN7z
@@ -369,6 +369,62 @@
         ZnP4L+AQGETdziv3QATG6OMEOIYZWA/AsZzQ2HTPz+YKhdW3gx9OEthIU6QyzBYLwIw/C0IgQEL8T0Dl
         +5gJsABAE+1xGUw9apy23Vrvzd6dUdwauQdmzFjRT2fRFL5O4BtgwnSjiePDmDPEe8ye77gG3+eeGCeC
         j6cPOLLHWgW8PWkyb2PQGhj+//jxdCmzsrbW6p/P/xfgipSEah/qlAAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="camera" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAEAAAABACAYAAACqaXHeAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAACxIAAAsSAdLdfvwAAAAGYktHRABmAGYAZge6Sm0AAAAHdElNRQfaCw8RHwiOp/tF
+        AAAAGXRFWHRDb21tZW50AENyZWF0ZWQgd2l0aCBHSU1QV4EOFwAAC2FJREFUeF7tmglwjecax48QO7HF
+        vgtBbEFssTbhDkNISHIrXKYRpvcGSW1RSyRBEVy73Hvd3IvWWBuaGVNKSktQKsZSS23VWmpXtdXy3P//
+        lffMl9NzTs6JzvTeO19m/vOefb7n9/6f533e94vFYv6ZBEwCJgGTgEnAJGASMAmYBEwCJgE3CGRbLHIJ
+        egrdhtz46v/OR6tXry41atSQmjVrSp06daRDhw4SFTVYtiBgArgMPcsFcAJjamqqDBkyRFq2bCmNGjVS
+        8vX1lcaNG0uTJk2kadOmSn5+ftKsWTNp3ry5tGjRQonfoVq1aqXk7+8vrVu3tqpNmzbStm1bpYCAAKV2
+        7dpZ1b59e6F4jR07drSOfNypUyerAgMDhercubPzSatWrZpoAITACwiPCJdx48fLkiVL5ECuAzSAkydP
+        yvbt2yVtZZrExY21C0BD0AAIwQhCQ9AgCMEIQkPQowZhhKEh6FEDIQhbGA6tyOBtAWgHDI6KkqSkJFm/
+        fr3kHM2RmzdvyrXr12Tnzp1wwDyrAxo2bPgrBxCAEYLRCXSDdoTRCY7cYHUEnMAZ7tOnjwwaNEgiIyNl
+        4MCB0rt3b+UCyhEMuwCKFy8uWiVKlBCtkiVLilGlSpUSrdKlS4tRZcqUEa2yZcuKlpeXl3iVhThC5cqV
+        s6p8+fKiVaFCBdGqWLGiGFWpUiXR8vb2lvr160uXLl0kLCxMhg8fLiNGjJBhw4bJgAEDFBhOXNWqVa0y
+        ArELoFixYlYABGGEwMe/CYRcAK5CIAx7EOhS5nIUXDlhwgSZPXu2zJ8/X2bOnCnx8fESERGhZr9KlSpW
+        ALpu8HWHAP5bINAR9tygU5TpQbtPnDhRVqxYIVu2bFF1aOPGjbJo0SIFpVevXioVCaEyZCygTgHYQrB1
+        gyMnMC2cp0MZVcnHjh0rq1evluzsbLly5YpcvXpVzp07J1m7s9Rq0qNHD4cpQQD8u3HjhhofPHigxmfP
+        nqnx6dOnaqQTmBoERQCUcRWxC6Bo0aLC4LWMNeFNIYwZM0aOHDki169fl4cPH8qLFy/k+fPn8ujRI7l3
+        757cuXNHBfH48WO5d/euZGzdqoqbrRMIgMD4x+/wj9/h36tXr9TI35wzZ45KAy6nGoBxOXUIoKAQ6Ap7
+        xbF79+5y4MABuX//vgqQM8TAX758ab1gffEMgJ/j7F6+fEnOnD4t06ZNywPBkQP0zD958kRBmDFjhvTv
+        31+tLpUrV1YQCIMQODoFYAvBWV1wtEKwyI0cOVIyMzPVzJ/65hs5eOiQZO3ZI6MQZAwAjIYLJsINhw8f
+        ltMIlk4gBOrWrVty6tQp9Z158+ZZIdSrV08oBhEeHq5yffHixbJu3TrZvHmzrFmzRhVDOo7w69atqwBQ
+        urfgaBeAp6enMHijHKWEs2WSSxSrcnp6uqxFzxCHAINh03A4IPqXXyQODngfwScBwixoJgJOwqxNhnJy
+        clReEwJnk8937NghkyZNUhCMyyfzOyQkREaNGiUJCQnKLSyK0dHRqhdg58lr0QB0p8nRIYCCQtDLJNfp
+        hQsXSlpamiRjVlqjWer2008S+vPPMgIBjUcKJAPCQkBYCQiroH8AwgpoPoJOBIT3AOrixYsKAtNl7969
+        smnjJunbt2+edGBgDCY4OFhCQ0NVzrMHCAoKUtZn8EYZu02nAAjBFoQrTiCEcePGydKlSyXho4+kHmwc
+        gILWBzM6FFaPQ3FKBoSlCHA1IGxGcNsoQNgI/QsQFkGJUCyCP3v2rAJw7do1+XDth8ra9pomNjycbbbW
+        7DZr1aqVp2HSEPTeg6NdAEWKFFGBG+VKOugVgsvO3LlzJWn5cimPSu3744/S+fZtCUNuj4ILpsAFfwWA
+        NXBBJgDsQXAHEXg2lAVlQOlQKpQARQMEa8OFCxdk27ZtsmzZMunWrbtdCI4aJmPnqFtujg4BuAPBWBw5
+        M6y8KSkp0mr/fvH+/ntphiXvLaRAJJarMSh8KXBBGmrBFgDYAwDHAeACAj0P5UC78XwDtAzvTYfehcZc
+        vqwK6dq1a2XBggWq1TW6wFHDxO7R2Drzsd6AcXQKgBBsQeTnhH79+kliYqLEYbfocf68VMWFt/jhBwnG
+        khaFVIiHC2bDBf9EGmTCBYcQ3EUE/QCzfBc6h8f7EPzHeD0NKZIMxUIR0HykE501a/YsGYvdpi6Eruwh
+        jBC4AdOyC6Bw4cIqcHsAnNUEOmE8tsoEEIQGxgO5WxW2bfHddxKM/B2MVIiHC2bDBavggky44CACu4CA
+        7yP4O7kA9iP4j/F6GgslIMXicxEc4Si6Kzk5WdWYgm6k9JkER4cAbCG46gQGT1VHe2vB+u2N1rYZKnkP
+        tLqRSIVYpEIKCuJKFMTNqAV7ENgxBHseEM5BRxH8LjxfzyKJwKfDKe9CA/HZ/gBJANyKx8bGFng3qbfk
+        HJ0CIARnbrDXK2gARY4eFcvx41IBjY8vIHS+dEnCUA9GIhWmIBUWIhVWIxW2IbAsBJuN2aZ24XEGAk9H
+        0Kl4bxKc8g4+1w/AAgGOv08IQ6KGuLWlNhZHnk5p2QXg4eGhAjfKUUrYQrACQNNjAYRSgFAXEAK+/VZ6
+        ox4MRT2IA4RkQFiCgP6NwDYhyK0INgPaAKXj+SIEPR3vxSJd3gasnvhsW7hH/z73B/pMwd0tNY/otBwC
+        cAeCsS7QnrzIKp9/LhZAKIL2twog+GEZ6woIAwDhHTjhPaRDEgJagJqwAgH+HYH+DVoOpeJ5IhSHoIdh
+        +QyBAgGsy5kzVgewmTECcAeCPqvk6BQAIdiCyK84Tp8+XV1kpw0bxILNjwU9fBlAqAsI/nBCENJhINIh
+        GjVhLHqEyXADQcxEgCkINBFjAsRaMQxFMxTqDlgtoUFohfnbbHV/dcqUzwmTcZnkUZ2WXQCFChUSSgNw
+        BwI3PrzIkWiDLfv2iQWVmyAqAoLPsWPSFoUxCKvDACyRUXBDDED8BWkxGjBGY6X4MwKN5ooBheC17njP
+        H46ph8/FY2nlbw8dOjQPAMJwJR00BB8fH9FyCsBVCMYVgttUFileaP1PPhHLF1+I5csvxRMgKn31lTTA
+        psb/xAnpCjf8IRdEOFaJPwJGJDQIlT4E6oXHgewh4Ja6eL8DYOr855aW541GF9hCcJYSDRo0EK18AbgK
+        wdg2c0fGix39wQdiycoSC7a+FmxkPAGiwsGDUgduaEo3AEQnOKIb6sNbgNED6dEV6gi1hhrjtVqQF3J/
+        HE6I9OwbD1xtQbhSF3iIquXoWJzFQaWBO+mgncDNEFthOuFtbIgsu3a9BsHCCBilMZuVCQJF0gcrRRPA
+        8GOhhJoAig/uL9SCKuFxSbwWvXKlCn7q1Klq5vVxWx4QtifPTg5d9VkCR6cAXIVgr1fgVlSvCH/C4aTn
+        p5++BrF7twLhARAl4AgvNEwVAcMbxdIbQFgrvL7+WopjLI7XYnLzngDYuTk6a3THCTwc0coXwJtA4L6d
+        bSudkIDlMQC9vAU3TyyfffYahMEVulaoogkonTdtkvdzl1QGz5MfR/chnN6DsOMEBs+tc23IJQDOIOS3
+        QvDYSUNgIBMBIxRHV74I0AvH13SFB1QOS5xfRoaErVolkw2B86iLF6uP3NyFYG+FUMHXrq3kMoA3gcAC
+        GRMTY10ddDV3Nk6ZMkV69uypbsq4ekfKkRNsIfCgRMstALYQCrJCsDbwoJIB6qZJNzc8x+OdZR5UODt+
+        d3TyzPrgCgQdPO94uw2goBBc3U0W5OQ5/xsxee9NMnCKd7wLBIAQXC2Oxtb594Jgu0IwcGfBE4oK0BUV
+        tFewd+Dq7GbMb3mDlv/z4Gjm9esuBe+OEwp6ypTntpzhVv2b3KXOL3jzfZOAScAkYBIwCZgETAImAZOA
+        ScAkYBIwCZgE/v8J/AeRhg5qpjZBdQAAAABJRU5ErkJggg==
 </value>
   </data>
 </root>
