Signed-off-by: maxam <wow_byt_96@hotmail.com>

--- a/glass/glass/Resources.resx
+++ b/glass/glass/Resources.resx
@@ -121,7 +121,7 @@
   <data name="button" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAIAAAABACAIAAABdtOgoAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAACxAAAAsQAa0jvXUAAAAHdElNRQfaCwgNDghVlbr4AAAAGXRFWHRDb21tZW50AENy
+        YQUAAAAJcEhZcwAACw8AAAsPAZL5A6UAAAAHdElNRQfaCwgNDghVlbr4AAAAGXRFWHRDb21tZW50AENy
         ZWF0ZWQgd2l0aCBHSU1QV4EOFwAAAnBJREFUeF7tnOluwzAMg/v+L70rxZANiUWLuhyrfyeR0kfnKArs
         9fL8fPRHIuCJ/6+2NMmmf48L4HDaFPP92tEBXPrtnEqJAM5D7BZGuQB2u1N935SLhnAz1vkSGUx+lPGr
         eV+R6wXAM1Uo+MXQAaBxOGXQAaABOL1DswH8nouJPVYuNb8OWBj/BmLlVui3zYDdeDANK121v1AA4ChV
@@ -139,7 +139,7 @@
   <data name="exit" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAACxEAAAsRAX9kX5EAAAAHdElNRQfaCwgQKySbQDbfAAAAGXRFWHRDb21tZW50AENy
+        YQUAAAAJcEhZcwAACxAAAAsQAa0jvXUAAAAHdElNRQfaCwgQKySbQDbfAAAAGXRFWHRDb21tZW50AENy
         ZWF0ZWQgd2l0aCBHSU1QV4EOFwAAAPtJREFUWEfNl8EOwyAMQ/n/n2artlajEPLsIo1DtcOI/domhpZa
         a/nn9TEv75/7tRos8IgBjoJVECPzr/4cYAVEZI4BnkDMzCUAByIzbwCiRnQbE5ofPdaOoFAYNqio0WeA
         KNCAGLXjEDKEhlkCXmGcggqEsvaWLfMYJsJkzSTQ8n2AGCRhM0vUHICOqLmfMAAHAu4jHECBgOZ9EGWF
@@ -150,7 +150,7 @@
   <data name="new_user" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAANwAAAClCAYAAAA3d5OIAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAACxEAAAsRAX9kX5EAAAAHdElNRQfaCwgRKjHuRIlCAAAAGXRFWHRDb21tZW50AENy
+        YQUAAAAJcEhZcwAACxAAAAsQAa0jvXUAAAAHdElNRQfaCwgRKjHuRIlCAAAAGXRFWHRDb21tZW50AENy
         ZWF0ZWQgd2l0aCBHSU1QV4EOFwAAD2VJREFUeF7tnUtsTV8bxtu/a4u2KFWUKKGtoHHpJdQtvWjrUveW
         Um31ou6MJKZGZhibMTJgQkyIRCKGQiLiGgaIgQjiEqzP08/57H+/7nP22pe119r7OclJmvScvfd59/Nb
         z7vX5V1px48fF3wzBtSAGg2kMdBqAs04M87QAIGjwzPDUagBAqcw2HQ5uhyBI3B0OIUaIHAKg02Ho8MR
@@ -223,7 +223,7 @@
   <data name="down" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAEAAAABACAYAAACqaXHeAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAACxIAAAsSAdLdfvwAAAAGYktHRACAAAAAAEilC+0AAAAHdElNRQfaCw0XITBJ5Oyf
+        YQUAAAAJcEhZcwAACxEAAAsRAX9kX5EAAAAGYktHRACAAAAAAEilC+0AAAAHdElNRQfaCw0XITBJ5Oyf
         AAAAGXRFWHRDb21tZW50AENyZWF0ZWQgd2l0aCBHSU1QV4EOFwAAD/tJREFUeF7lm3eMXNUVxgdMM0X0
         XkXv9Q8L0YtAdBBdQogqIbooBgkhTCAhFBMSQsAQsEOCCYRggykhBBuDbYqNGzbYsYHYBmy8rruuW96X
         7zf3XjOzO7M7M7uWN8pIRzM789695zv9nPs2l1vNrz65XI8Hc7mdH8jlTvlFLtfbNNA0zlRnkqkpfuY7
@@ -299,7 +299,7 @@
   <data name="up" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAEAAAABACAYAAACqaXHeAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAACxIAAAsSAdLdfvwAAAAGYktHRACAAAAAAEilC+0AAAAHdElNRQfaCw0XISUkOQh0
+        YQUAAAAJcEhZcwAACxEAAAsRAX9kX5EAAAAGYktHRACAAAAAAEilC+0AAAAHdElNRQfaCw0XISUkOQh0
         AAAAGXRFWHRDb21tZW50AENyZWF0ZWQgd2l0aCBHSU1QV4EOFwAAD+dJREFUeF7lm3eMXNUVxgdMM0X0
         XkXv9Q8L0YuM6CC6hBBVQnRRDBJCmEBCKCYkxAFDwA4JJhCCDaaEEGwMtik2bthgxwZiG7Dxuu66bZn3
         5fu9d6+Z2d3ZmdkdZy1lpaOZnXnv3vOdfs59k8ut4b++uVyPh3K5XR/M5Xr/IpfrYxpsmmCqM8nUHN7z
@@ -369,6 +369,171 @@
         ZnP4L+AQGETdziv3QATG6OMEOIYZWA/AsZzQ2HTPz+YKhdW3gx9OEthIU6QyzBYLwIw/C0IgQEL8T0Dl
         +5gJsABAE+1xGUw9apy23Vrvzd6dUdwauQdmzFjRT2fRFL5O4BtgwnSjiePDmDPEe8ye77gG3+eeGCeC
         j6cPOLLHWgW8PWkyb2PQGhj+//jxdCmzsrbW6p/P/xfgipSEah/qlAAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="bil_rod" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAJYAAACWCAYAAAA8AXHiAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAACxIAAAsSAdLdfvwAAAAGYktHRAD/AP8A/6C9p5MAAAAHdElNRQfaCw8KCCHZ5asu
+        AAAAHWlUWHRDb21tZW50AAAAAABDcmVhdGVkIHdpdGggR0lNUGQuZQcAAAscSURBVHhe7Z176CVVAcd/
+        RQ+whzdCQv+IWxCVZW5pWij5C4IILLYHoVIKPSwQNdFaFU3KbEMyg0opKpfe0WpWopbikkpPbaVS0cxd
+        M3uYur/U0rSy78dmYBhm5szMOffe+c39Dny5u/fO45zP+Z73OfNbWfFhAiZgAiZgAiZgAiZgAiZgAiZg
+        AiZgAiZgAiZgAiZgAiZgAiZgAiZgAiZgAiZgAiZgAiZgAiZgAiZgAiZgAiZgAiZgAiZgAiZgAiZgAiZg
+        AiZgAiZgAiZgAiZgAiZgAiZgAiZgAiZgAiZgAiZgAiZgAiZgAiZgAiZgAiZgAiZgAiZgAiZgAiZgAiZg
+        AiZgAiZgAiZgAiZgAiZgAiZgAiZgAiZgAiZgAiZgAiZgAiZgAiZgAiZgAiZgAiZgAiZgAiZgAiZgAiZg
+        AiZgAiZgAiZgAiZgAiZgAiZgAiZgAiZgAiZgAiZgAiZgAiZgAiZgAiZgAiZgAiZgAiZgAiZgAiZgAiZg
+        AiZgAiZgAiZgAiZgAiZgAiZgAiZgAiZgAiZgAiZgAiZgAiZgAiZgAiZgAiZgAiZgAiZgAiZgAiZgAiZg
+        AiZgAiZgAiZgAiZgAitPEIPdJD45JtKh0hekn0t/kv4h/Ut6VPqv9Fim/+jzPul26ZYa8dsfpdukb0kH
+        m/nyEMBUu0sflO4pmSc3UcpPDJkbFMPulH4mbZU+Jh0pvVKaSLnhlyc1RhDTpygOL5W+Kv2zUBKlNFHf
+        e+XG4/O30uoIeC9FFCgNTpP+PjBD1RmRUu7r0nQpUmegkXySwvW0hrDx2ybpoXViqqLZ/qIwnyPtPVD2
+        ow9WXduEBNki0RAPVVO0f3ZIN0v8GyOuSTTGfyfVNdiL39N4v1t6uMXzQuEpdhp+o/vtN/pUHGAEn1gT
+        JhrIVCtNiYiBzpb21EmPpZTuuUE6XDpZoud5lYRJMOsDmYGLPc+Q2TD4xgHyH2WQnqxYvbgUs6n+f4bU
+        lGj0CDknuaG6mFPPf710bma4fwcyAcb7q+TSaw5W3l/P2CN7ztOz0qepPUVVtUkpuKOLAeZxrsJFhviU
+        hOmbSi/MtToHtkv7iKcq5gwjTKSjpT8HEoS2zxHzMEnMMxTG10jfkZqq8fv1+zskMpOPhATyBju5fLO0
+        K2AqEuLUmASf97UK7yckOhJ1pRdV/TXSixJy9a2yHPs3fYYawNfrnOm8jZHieQr3AdK3AwZjJN9DEhFZ
+        Yi9de5y0XXokUELluZw21cEpEnmR98gyEaVuVelFxrpSYmaBpoGPlgRoR7xb+kOL0ikHj/G+J71kkYZI
+        +WzFZTWQoe7V7+9pyXQpT2O0nAbsF6XfS21Hzcm5l5EAQ+z1pTCZ4nZ8wFywoiMzWUrn1ESakukg6YdS
+        mzGdcrVwha5bl22pLqZTHN8m7ZDqGvX0JslgL1t2c9F2+rAU6tnVgWQY4XxpoYOdXcwRe25Wov+0wVx5
+        u+s5y2Ku4rzegYr0pVJTl7rOTHfoumO2ray8LjaR1uv1iv/LJRYo1vWK+f5zy2CsZxciybQE7afQUEHZ
+        WKylYknJvuvVECnDLQ6U9udJTb1k5b/xrmalpHpeZiyW7N7ZUIwXzUR7YU26GDgpE2Us96KjIjYflZoW
+        MPIbq2Z3l0a1UnWiCLF2aiqxNKWuisu/Z1HeR6SlaTfFGD0zF73B0BIhOkWIEo4xvgukdT24+qysOG4y
+        FdUiue+dMZCX+Vqxw1xsCAll3OLvcEeYkglwlvYwVfR9iZW3gzUeVeCe0o0NEaYResAymyJV3LMM3LeH
+        XTYkhqNzRenGejBG+AdjNiZJmYmvm61nu9RoRshTGSTmPuK5KrGgsEvJ1fZczMb00rXSJ6U3Ss+V5j6d
+        RIORYYWqgO8kh8VA9LXVK1+zWuJd+rwuK3XaGqfLeXkVSjp+WXqLNLexsw16WNW0DI1ImyrxkuiqjCbO
+        pAHLpOk9/liiqsw35XYd8gkZj44Bm0Am0kyPz9eUVje5tEm7zr4vT6XPqsTqVZbgsEIVc4T2C4QMhnFp
+        O9MMmkkpxih5VSA29wXh62ZvSKVZvhCA3Uf0NPsajevYzXRY6lKsKkAP6iF72yCzN0gqxkqvqXS69AuJ
+        ZeA0b7pUo2s6/yQpWSO/atBuS6oI+z6LMacMwnQSo/mMPbYtzdj2xs6k6IOlMFXG+oANsRhDzIJ7NvJP
+        VcfQUagU265zojeBsD2rys2HzSKCvufizar0XpUulOp2hGO8N8QWWdTJ5YY7RvPqhDkMMywyoymNWWjI
+        aH1Vx+2bscb6ScWNH15khP3s+ZVqSnvW3NFRK5uLWYGo476Km+504s4vcRfNWunPppaysVjGE3VUjbhv
+        7RNZhYI5xy9JmDWfka/7pLql08BAH5/8HxGhW6WvSY8P3PUJy5Cv2aZVtYrXRokXkVBjMPnPqhLifZfE
+        PB/tHyaXc8EJUbowqLkxVRx1rzOlsrF4btRRtez4zC6B7tjjCI0Gl3/HmLQDjl2vO3sU9vdJv85MQUbu
+        sxGlyAUmZN4k0226D+8nm4uxNnUxlgJ1ijTr1zuSW1kfvleXsC3yXIV1Km2VQt37rpktPx8mZ8VmuEEa
+        S4FiAK7t4FtfgPl1JNCvpEMWaZg2z1YYaRawEG/WbCgBo4aGBmcsBYgt41U9iqIRim2sWGPl17OKcrVN
+        Ai/iHIWNfYVrFdVLqviX78MLd3uX5EM01mcb4LF8dh+Jt/nRxmCiu1gl0LajwXqJdHGWu6/SJyPDVKuh
+        6mOXzknSxkhtPoXrhpamoirjPaY02mGBMAkL9L4i0aim/YNgzXRLlTkpFd/bNx7Z/ZO3sapGX08KBVKB
+        mUpVQxUEkEnQV0kcbCNrs1ISI+Vbx1jDPZFC79S6JBTOef+uMNOTrcsUrECgI7JNulq6QbpJyk1FZmST
+        K9+TLtwH0/AdO6feJO2Uqsx1Ud+46n60kcv3pKceNa1TXthPZE4OBVLn1K3hYi8iAWKqiC31XdsYPJ9x
+        lfygrfLdDHI58g+FwjnP3xVGMkTdG2fggjkoofu8XJeSnEw6kWgKlFnc0TeuutfHK+5HOrygkA6d/8m4
+        STGQ3PDsUCB1DlVROXKYiL/mwHFRjRnatDPILdNCTJ6hf5PLq64dTFtL4dtcE0aqvE9LLGVpE/+qc0iX
+        H2RMrq+4D8xaT8NlQ0SUrpSSdSXsKzq7qXDBjyIiWwbAa4zItWy47LrFqXyvD+kevBg312sThrNv4va9
+        7iyFnSqv7/X5dZiHHVUMrMbeq831USXW8QkDybaj/OhaBZYjyhttykesWdvATH0OG3sZkmn7IrrQ84/S
+        vd6cMM3qnkfpGtXGmiYKJOuwX11wQqhXFwJIEV0+LtAXsaPWoeem/v1chXlLIsaE7QyJt1DPMpOt6f5v
+        reDf+asYmAzQ/VJih0nR4bElFmuwyweZALD8ebmYMM/rWoYHCPPlicJLZqXEYgiHmiZvxIe27XeJL8Md
+        yd5T3+XB5XPZE5e/TKRohNg/uHR7TfZ4vr7/RqKEiol3m2upTp4psR2+zfmhcxiOwajFg9KL0j10beh3
+        xskOlSY13AfzNVVAKDJNv0evBxoMif/35mJY5NduG1CcFhYUctauCKCM24zlOFERiW1zcv0JYwESGw/e
+        ENxnMBCI/GndsRxksjavhmoq1WhXvnAsQFLEY1U3aTOlU4S6Q9cwSj2mg/gwL9inSiRzvl9Ktt9vLGBZ
+        V81yl1B1wKt4GL0mh4/x2KBIfUZisJSpn9DQCb297dLbpaY/JjpGVq3jxLQMYBmWoK3A3whE/Jvv+I1z
+        lu0ocxk0j/8BM44psMzAwG0AAAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="bil_gron" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAJYAAACWCAYAAAA8AXHiAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAACxIAAAsSAdLdfvwAAAAGYktHRAD/AP8A/6C9p5MAAAAHdElNRQfaCw8KDS9DKnJs
+        AAAAHWlUWHRDb21tZW50AAAAAABDcmVhdGVkIHdpdGggR0lNUGQuZQcAAAsYSURBVHhe7Z17qC1VAcaP
+        kQVluSNC9A/ZBVFZ1i3TiqROEIhgcq0IkzLQMsHSJOta+CBNb4iPoDKKykvvyMxSfFR4scQyrSuVRs97
+        7WlpejJNM/X6/XQGhmFm1systfeeM/sb+Nj37j2PtX7rW++15qys+DABEzABEzABEzABEzABEzABEzAB
+        EzABEzABEzABEzABEzABEzABEzABEzABEzABEzABEzABEzABEzABEzABEzABEzABEzABEzABEzABEzAB
+        EzABEzABEzABEzABEzABEzABEzABEzABEzABEzABEzABEzABEzABEzABEzABEzABEzABEzABEzABEzAB
+        EzABEzABEzABEzABEzABEzABEzABEzABEzABEzABEzABEzABEzABEzABEzABEzABEzABEzABEzABEzAB
+        EzABEzABEzABEzABEzABEzABEzABEzABEzABEzABEzABEzABEzABEzABEzABEzABEzABEzABEzABEzAB
+        EzABEzABEzABEzABEzABEzABEzABEzABEzABEzABEzABEzABEzABEzABEzABEzABEzABEzABEzABEzAB
+        EzABEzABEzABEzCBlV3E4CkSnxwT6RDps9IN0t+k+6T/Sf+XHpF2ZnpYn3dJf5R+UyN++4v0e+nr0oFm
+        vjwEMNXu0gekO0vmyU2U8hND5gbFsDukn0gXSx+VjpT2lyZSbvjlSY0RxPRJisOLpC9J/y2URClN1Pde
+        ufH4/JW0OgLeSxEFSoNTpH8PzFB1RqSU+4o0XYrUGWgkn6hwPbUhbPy2Sbp/nZiqaLbbFebzpH0Gyn70
+        waprm5AgWyQa4qFqivbPdunXEv/GiGsSjfHfSXUN9uL3NN7/KT3Q4nmh8BQ7Db/U/fYbfSoOMIJPqAkT
+        DWSqlaZExEDnSHu+Z+fKzpTSPTdIb5VOluh5XiNhEsz6n8zAxZ5nyGwYfOMA+Y8ySLsqVi8oxWyq/58u
+        NSUaPULOSW6oLubU8w+SLsgM91AgE2C8f0guveZg5ZfrGc/KnrNbVvo0taeoqjYd99DK9i4GmMe5ChcZ
+        4nwJ0zeVXphrdQ5sl/YRT1bMGUaYSMdIfw8kCG2fI+ZhkphnKIyvkb4pNVXj9+j3t0lkJh8JCeQNdnL5
+        ZunugKlIiA/HJPi8r1V4PybRkagrvajqfyQ9PyFX3yrLsXfoM9QA/pnOmc7bGCmep3AfIH0jYDBG8j0k
+        EZEl9tK1x0vbpAcDJVSey2lTHZgikRd5jywTUepWlV5krB9IzCzQNPDRkgDtiKOlP7UonXLwGO870gsX
+        aYiUz1ZcVgMZ6l/6/Z0tmS7laYyW04D9nPQHqe2oOTn3ShJgiL2+FCZT3E4ImAtWdGQmS+mcmkhTMr1a
+        ulpqM6ZTrha+r+vWZVuqi+kUxzdLzBI0zTWSwV687Oai7XSaFOrZ1YFkGOHT0kIHO7uYI/bcrET/cYO5
+        8nbXHstiruK83isU6Sukpi51nZlu03XHHbZ15fWxibRer1f8XyqxQLGuV8z3n1oGYz2zEEmmJWg/hYYK
+        ysZiLRVLSl6yXg2RMtziQGl/odTUS96q30e7mpWS6tmZsYjknxuK8aKZGH1eky4FTspEGcu96KiIzRlS
+        0wJGfmPV7O7SqFaqThQh1k5NJZamhGbyWZT3EWlp2k0xRs/MRW8wtESIThGihGOM7yJpXQ+uPiMrjptM
+        RbVI7nt7DORlvlbsMBcbQkIZt/g73BGmZAKcpT1MFX1XYuXtYI1HFbindEtDhGmEHrDMpkgV9ywD9+1h
+        lw2J4ehcUbqxHowR/sGYjUlSZuLrZuvZLjWaEfJUBom5j3iuSiwo7FJytT0XszG9dJ10rvQGaW9p7tNJ
+        NBgZVqgK+A5yWAxEX1u98jWrJY7S501ZqdPWOF3Oy6tQ0vEL0huluY2dbdDDqqZlaETaVImXRFdlNHEm
+        DVgmTe/xWomqMt+U23XIJ2Q8OgZsAplIMz0+U1Na3erSJu06+748lT6rEqtXWYLDClXMEdovEDIYxqXt
+        TDNoJqUYo+RVgdjcF4Svm70hlWb5QgB2H9HT7Gs0rmM30+GpS7GqAN2rh+xjg8zeIKkYK72m0qnSTyWW
+        gdO86VKNrun8k6RkjfyqQbstqSLs+yzGnDII00mM5jP22LY0Y9sbO5OiD5bCVBnrfTbEYgwxC+7ZyD9V
+        HUNHoVJsm86J3gTC9qwqNx8+iwj6nos3q9J7VfqWVLcjHOMdHFtkUSeXG+4YzasT5jDMsMiMpjRmoSGj
+        9VUdt6/FGuv6ihs/sMgI+9nzK9WU9qy5o6NWNhezAlHHXRU33eHEnV/iLpq10p9NLVXr6qKMVTXifnGf
+        yCoUzDl+XsKs+Yx83SfVLZ0GBvr45P+IdUm/lb4sPTZw1ycsQ76GVbWK10aJF5FQYzD5z6oS4v1XiXk+
+        2j9MLueCE6J0YVBzY6o46l5nSmVj8dyoo2rZ8ZldAt2xxxEaDa6avacd8N71urNHYX+39IvMFGTkPhtR
+        ystoyLxJptt0H95PNhdjbepiLAXqQ9KsX+9IbmV9+F5dwrbIcxXWqcSrmkLd+66ZLT8fJmfFZrhBGkuB
+        YgCu7eBbX4D5dSTQz6XXLtIwbZ6tMNIsYCHerNlQAkYNDQ3OWAoQW8arehRFIxTbWLHGyq9nFeVqmwRe
+        xDkKG/sK1yqql1TxL9+HF+72LsmHaKxPNsBj+ey+Em/zo43BRHexSqBtR4P1cunSLHdfo09GhqlWQ9UH
+        y0qStDFSm0/hurmlqajKeI8pjXZYIEzCAr0vSjSqaf8gWDPdUmVOSsV39Y1Hdv/kbayq0deTQoFUYKZS
+        1VAFAWQS9JUSB9vI2qyUxEj51jHWcE+k0Du1Lg+Fc96/K8z0ZOsyBSsQ6IhslX4o3SzdKuWmIjOyyZXv
+        SRfug2n4jp1Th0o7pCpzXdI3rrofbeTyPempR03rlBf2E5mTQ4HUOXVruNiLSICYKmJLfdc2Bs9nXCU/
+        aKt8O4Ncjvz9oXDO83eFkQxR98YZuGAOSug+L9elJCeTTiSaAmUWt/WNq+51dsX9SIfnFtKh8z8ZNyl3
+        Zc8JBVLXUBVVTQXx1xw4LqkxQ5t2BrllWojJ0/RvcnnVtYNpayl8m2vCSJX3cYmlLG3iX3UOCX1ZxoT3
+        iVWVMK2n4bIhIkpXSsm6EvZlnd1UuOB7EZEtR47XGJFr2XDZdYtT+V4f1D14MW6u1yUMZ9/E7XvdWQo7
+        VV7f6/PryHDsqGJgNfZeba6PKrFOSBhIth3lR9cqsBxR3mhTPmLN2gZm6nPY2MuQTNsX0YWe/w7d67CE
+        aVb3PErXqDbWNFEgWYf9qoITQr26EECK6PJxkb6IHbUOPTf17xcozFsSMSZsp0u8hXqWmWxN939TBf/O
+        X8XAZIDuRokdJkWHx5ZYrMEuH2QCwPLn5WLCPK9rGR4gzFclCi+ZlRKLIRxqmrwRH9q23yW+DHcke099
+        lweXz2VPXP4ykaIRYv/gEhsEqo7n6MuvJkqomHi3uZbq5OkS2+HbnB86h+EYjFo8KL0o3UPXhn5nnOwQ
+        aVLDfTBfUwWEItP0e/R6oMGQeLw3F8Miv3brgOK0sKCQs+6OAMq4zViO9ysisW1Orj9xLEBi48EbgvsM
+        BgKRP607loNM1ubVUE2lGu3K540FSIp4rOombaZ0ilC36xpGqcd0EB/mBftUiWTOY6Vk+/3GApZ11Sx3
+        CVUHvIqH0Wty+BiPDYrUJyQGS5n6CQ2d0NvbJr1FavpjomNk1TpOTMsAlmEJ2gr8jUDEv/mO3zhn2Y4y
+        l0HzeBRC7bqxxB2vsgAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="bil_bla" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAJYAAACWCAYAAAA8AXHiAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAACxIAAAsSAdLdfvwAAAAGYktHRAD/AP8A/6C9p5MAAAAHdElNRQfaCw8KEiLwwQBP
+        AAAAHWlUWHRDb21tZW50AAAAAABDcmVhdGVkIHdpdGggR0lNUGQuZQcAAAsaSURBVHhe7Z176CVVAcd/
+        iiZU5s2IXP+QWxCVWm2aLxL7BUIEFtuD0CiDnoKUReZqVFKmG6IZVEpRuVRa4SMrsScuPagsa8XSyB67
+        lo8yHz97qKW1fT85A8MwM2dmzrn3zm/ud+DL3b13Hud8zve8z5nfyooPEzABEzABEzABEzABEzABEzAB
+        EzABEzABEzABEzABEzABEzABEzABEzABEzABEzABEzABEzABEzABEzABEzABEzABEzABEzABEzABEzAB
+        EzABEzABEzABEzABEzABEzABEzABEzABEzABEzABEzABEzABEzABEzABEzABEzABEzABEzABEzABEzAB
+        EzABEzABEzABEzABEzABEzABEzABEzABEzABEzABEzABEzABEzABEzABEzABEzABEzABEzABEzABEzAB
+        EzABEzABEzABEzABEzABEzABEzABEzABEzABEzABEzABEzABEzABEzABEzABEzABEzABEzABEzABEzAB
+        EzABEzABEzABEzABEzABEzABEzABEzABEzABEzABEzABEzABEzABEzABEzABEzABEzABEzABEzABEzAB
+        EzABEzABEzABEzABE1jZTQweK/HJMZGOkz4lXSfdIf1T+pf0sPRfaVem/+jzXukP0m9qxG+3Sb+TviQd
+        bebLQwBT7SO9W7q7ZJ7cRCk/MWRuUAy7U/qJdLn0IelE6TBpIuWGX57UGEFMH6M4HCx9XnqgUBKlNFHf
+        e+XG4/NX0uoIeC9FFCgN3ivdPzBD1RmRUu4SaboUqTPQSO6hcD2uIWz8tll6cJ2Yqmi2PyvM50sHDpT9
+        6INV1zYhQbZKNMRD1RTtnx3SryX+jRHXJBrjv5XqGuzF72m83yU91OJ5ofAUOw2/1P0OHX0qDjCCu9eE
+        iQYy1UpTImKgc6UNG3bbtSuldM+N0gnS6RI9z2slTIJZ/54ZuNjzDJkNg28aIP9RBmlPxepZpZhN9f8z
+        paZEo0fIOckN1cWcev6LpQsywz0SyAQY7y+SS685WPn5esaTs+c8Pit9mtpTVFWb91t5ZEcXA8zjXIWL
+        DPERCdM3lV6Ya3UObJf2EXsp5gwjTKS3SHcGEoS2z2vmYZKYZyiMx0iXSU3V+N/0+2slMpOPhATyBju5
+        fIt0X8BUJMR7YhJ83tcqvB+W6EjUlV5U9T+QnpmQq2+V5di/6jPUAP65zpnO2xgpnqdwHy59OWAwRvI9
+        JBGRJfbXtW+Xtkv/DpRQeS6nTXV0ikRe5D2yTESpW1V6kbG+KzGzQNPAR0sCtCPeKP2xRemUg8d4X5UO
+        WqQhUj5bcVkNZKh79PubWjJdytMYLacB+2np91LbUXNy7jdIgCH2+lKYTHE7JWAuWNGRmSylc2oiTcn0
+        AulbUpsxnXK18B1dty7bUl1Mpzi+SmKWoGmukQz2nGU3F22n90uhnl0dSIYRLpIWOtjZxRyx52Yl+o8b
+        zJW3u56yLOYqzusdoUhfIzV1qevMdKuuO3nflW3HxibSer1e8X+exALFul4x339iGYz1pEIkmZag/RQa
+        Kigbi7VULCl57no1RMpwiwOl/YVSUy95m34f7WpWSqqnZsYikn9qKMaLZmL0eU26CjgpE2Us96KjIjYf
+        lJoWMPIbq2b3kUa1UnWiCLF2aiqxNCU0k8+ivA9IS9NuijF6Zi56g6ElQnSKECUcY3wXS+t6cPWJWXHc
+        ZCqqRXLf62IgL/O1Yoe52BASyrjF3+GOMCUT4CztYaroaxIrbwdrPKrADdJNDRGmEXr4MpsiVdyzDNy3
+        h102JIajc0XpxnowRvgHYzYmSZmJr5utZ7vUaEbIUxkk5j7iuSqxoLBLydX2XMzG9NIPpfOkl0oHSHOf
+        TqLByLBCVcB3ksNiIPra6pWvWS3xBn1en5U6bY3T5by8CiUdPyu9Qprb2NlGPaxqWoZGpE2VeEl0VUYT
+        Z9KAZdL0Hr8nUVXmm3K7DvmEjEfHgE0gE2mmxydrSqubXdqkXWffl6fSZ1Vi9SpLcFihijlC+wVCBsO4
+        tJ1pBs2kFGOUvCoQW/qC8HWzN6TSLF8IwO4jepp9jcZ17GY6PnUpVhWgf+ghB9ogszdIKsZKr6n0Pumn
+        EsvAad50qUbXdP6pUrJGftWg3dZUEfZ9FmNOGYTpJEbzGXtsW5qx7Y2dSdEHS2GqjPUOG2IxhpgF92zk
+        n6qOoaNQKbZd50RvAmF7VpWbj59FBH3PxZtV6b0qXSHV7QjHeC+JLbKok8sNd4zm1QlzGGZYZEZTGrPQ
+        kNH6qo7bF2ON9aOKGz+0yAj72fMr1ZT2rLmjo1Y2F7MCUce9FTfd6cSdX+IumrXSn00tVevqooxVNeJ+
+        eZ/IKhTMOX5Gwqz5jHzdJ9UtnQYG+vjk/4h1SbdIX5D+P3DXJyxDvoZVtYrXJokXkVBjMPnPqhLifbvE
+        PB/tHyaXc8EJUbowqLkpVRx1r7OksrF4btRRtez4rC6B7tjjCI0GV83e0w5423rd2aOwv1W6MTMFGbnP
+        RpTyMhoyb5LpNt2H95PNxVibuxhLgTpDmvXrHcmtrA/fv0vYFnmuwjqVeFVTqHvfNbPl58Pk7NgMN0hj
+        KVAMwLUdfOsLML+OBPqF9MJFGqbNsxVGmgUsxJs1G0rAqKGhwRlLAWLLeFWPomiEYhsr1lj59ayiXG2T
+        wIs4R2FjX+FaRfWSKv7l+/DC3d4l+RCN9fEGeCyffbbE2/xoYzDRXawSaNvRYL1auirL3dfqk5FhqtVQ
+        9cGykiRtjNTmU7huaGkqqjLeY0qjHRYIk7BA73MSjWraPwjWTLdUmZNS8c1945HdP3kbq2r09dRQIBWY
+        qVQ1VEEAmQQ9UuJgG1mblZIYKd86xhruiRR6p9bVoXDO+3eFmZ5sXaZgBQIdkW3S96UbpJul3FRkRja5
+        8j3pwn0wDd+xc+pl0k6pylxX9o2r7kcbuXxPeupR0zrlhf1E5vRQIHVO3Rou9iISIKaK2FLftY3B8xlX
+        yQ/aKl/JIJcj/2AonPP8XWEkQ9S9cQYumIMSus/LdSnJyaQTiaZAmcWtfeOqe51TcT/S4emFdOj8T8ZN
+        yl3Zc0OB1DVURVVTQfw1B44ra8zQpp1BbpkWYrK3/k0ur7p2MG0thW9LTRip8j4qsZSlTfyrziGhv54x
+        4X1iVSVM62m4bIiI0pVSsq6EPaSzmwoXfDsisuXI8Rojci0bLrtucSrf6zTdgxfj5npRwnD2Tdy+152t
+        sFPl9b0+v44Mx44qBlZj79Xm+qgS65SEgWTbUX50rQLLEeWNNuUj1qxtYKY+h429DMm0fRFd6Pmv171e
+        njDN6p5H6RrVxpomCiTrsI8qOCHUqwsBpIguHxfri9hR69BzU/9+gcK8NRFjwnamxFuoZ5nJ1nT/V1bw
+        7/xVDEwG6H4mscOk6PDYEos12OWDTABY/rxcTJjndS3DA4T5m4nCS2alxGIIh5omb8SHtu13iS/DHcne
+        U9/lweVz2ROXv0ykaITYP7jEBoGq42n68tJECRUT7zbXUp08QWI7fJvzQ+cwHINRiwelF6V76NrQ74yT
+        HSdNargP5muqgFBkmn6PXg80GBKP9uZiWOTXbhtQnBYWFHLWfRFAGbcZy/EuRSS2zcn17xwLkNh48Ibg
+        PoOBQORP647lIJO1eTVUU6lGu/IZYwGSIh6rukmbKZ0i1B26hlHqMR3Eh3nBPlUimfMkKdl+v7GAZV01
+        y11C1QGv4mH0mhw+xmOjIvUxicFSpn5CQyf09rZLr5aa/pjoGFm1jhPTMoBlWIK2An8jEPFvvuM3zlm2
+        o8xl0Dz+B5VEQwsMah12AAAAAElFTkSuQmCC
 </value>
   </data>
 </root>
