Signed-off-by: maxam <wow_byt_96@hotmail.com>

--- a/glass/glass/Screens/GameFarger.resx
+++ b/glass/glass/Screens/GameFarger.resx
@@ -117,4 +117,123 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="pictureBox4.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAJYAAAA8CAYAAACEhkNqAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAACwwAAAsMAT9AIsgAAAAGYktHRAD/AP8A/6C9p5MAAAAHdElNRQfaDA0MIxYLjJth
+        AAAAHWlUWHRDb21tZW50AAAAAABDcmVhdGVkIHdpdGggR0lNUGQuZQcAAAwOSURBVHhe7V0JkBxVGf5n
+        z+wxO7OzuwPBqAsSSu5IImKhEiKCUFIilJgYQC0IJqWlUB5QmhgpMWoEy7IwGogkHglBowY5QhI0liQi
+        RwoSxRzsbjYhB0dOyJpNdnfa7+uZ3urp7Z6enu7pnenpV/XV9Ex3v37vf1//73//+98bkTCFEgglEEog
+        lEAogVACoQRCCYQSCCUQSqCIEogg70aAn0xx4BPA/cCzwF6gDzgODAApQMlgCJ8HgR5gmwV4bjfQBSwH
+        PlTEuoRZl5gESKoY8A1gv4E8Gom8/CQhNYKSsL3Av4AVwN3ATcD7gTigEb7ERBYWJ5cE6nDyHOC3wP8A
+        L8njNi+NePz8DzA5bMrykAC1wWzgSIkRyoqQ1HJLgc7yEG8wS1mDajXlqBrP3QEcKxNS6cn2Gsp8L3BW
+        MJuu9GtlZZuwQZYANMTtuivaPzuALQCPScTDAI3xVwAY7PXbqyTZVSXjuqvlPT01ctaONCbsqJULe2vk
+        /Fdr5NwD1TL+eI2cp6QxQf3Ebyqq5BRgrBKRFpQnYlcmnqf2+jcwsfSbIXglrLKoEg1kNoxlA0ak6ViT
+        fHPl5pfO3jOoiOI1envHDcybfefRpOw62CFb32qVPx2KyeKjTfK1/lqZeCIiMdhVeRGMdSDBrwle85Vm
+        jWpRrDMNRevE97mA3l2QRS4Q6kCzzPuj10Rymt+Gf1zU1yorNzbL7L11cskQymWnxV4PtZc/RJyEx3Rk
+        HtWMz/mZbsy0gdBwb0Zl/nKnBPDr+jZ5emu9XH3EhmAk12R/xFuZT6lHtelGiAO3Avtsur3+uDz0K79I
+        4uY5CVm7q16uTOUg2Fuo6w0AX6YweSgBzWBnt/cD4JA5qSKqoQzD+WhcHl7rprFH495GmTmQg1zs6p8G
+        3uuhXMOsMm/sm/g0saVIqBhGZBcozfK93aNBCq+e2SqPYBR6+okc2pie/NAl4eKVOAX3fgV4EbAUdESa
+        lTFyndIqT3g+yvOKLE7zmTV9wf4mub2f7goTgvHFegrgzAJNgzDlKQHaETcDu8y1U9qdwC6jXq4CoVYq
+        f1t7SWBIpSdhVH44ZEEuyuAAcEueMq3Iy+gt/wiwCOgGbL3mJFWT3JlyqgnK8fpWeTxFxys1s4n2oqw4
+        kIlXJHMsKk3NdDGwGhg0EdoIQUYkrjTIF5QO2RJIDZWL+DFZonrzTQhGp/Aq4LxKJxdtp+8AFiO7bM85
+        yVQrH4ZRPltJyLqKI5SebEnZB3tymhm5NLvrpEohl35e7wOo9BMA5+ZsPM51eDtPgxA/o7TIL6Ghtp4o
+        x26sWGWOyvetjPqfVwKx2nSV5KQq7SfLaRcaqZjmUBplFsj0M6VdNla0dspFyqS8pmouixd0HX4PbDQr
+        NdWpGWKxkq9aaSkSiu6CFlmgtMmzIZnynBzvkB2WLylkzeBGRs0yejZQkaocpTB2qhNgaIrp20VSUTt1
+        SPdQsbqNIOcLZ2ouclHmHBQR9AO+ASwGytq52ppRx5akqpMpqYSs7gtyw/tRN2j7fgtXhFVXSTISjFvj
+        OgDGf3Gq6C8AI29LlnjsAscCL5tpKgTPwbH5yS1+CL1SntEgN/Y5JFcu0nFwRe3GeDB6+EuGbJwk5Uz8
+        iKA7kqpF7jtUKQ3uZz3b5JnjjFYVqbaL8XJ6ntqN0RXrgXuAq4F3Ab5PJ9FgpFshqwIkFeKPjvkp7Ep8
+        VlyWvjFGrkc35znB2J5aF9qL4weBawHffGcT8LCsaRmSKio/rogpmFIhc1L2bsEMRU+zzO1qkZ/2I95r
+        sFFuTdG2rZMr1Fh8touZueLwNw4MuAgkDhQ1LTQWDAsPQjdCnm4Ev4g5Y+rCvg7Z3heTpcei8qOhOpmc
+        qpZON0TjYIArzGkGFUWL7dQTi29FTH4TEqvEiGVG4A7p2Q9/4uF6+RRCdsYiJt904tuOfLStuS3BVK+1
+        WJbRTpWLVSthN1gGxDKSrV1e+i9sttexyuhInVx6HESz85vpSXcYxPq6l0Z+1rq+MTI91FZlSCozjQYF
+        sSsuy95GhCvixPKyz94Gsa7wwvBiKEwWsVrlsZBYASGWnmxcQxmVew42yOfttBgjgF0vAuHyrOGusEpO
+        wnRNT0isABJLTzIEDMDFca1V+DiJd6VbrTVHb7g3yA0hqQJOKj3BEHHBPcfMjPuH3BLrn1rGHFHE5P6Q
+        WBVELJIM7X/UhFzcE8NV4i54KmM5GmyXF0JiVRixMGVnFnjAMB5Xadjjjh1ZQvuqwkhFjdUuLzOg09gd
+        cmLbVRoOO8YUAvxX+zzRWN3d71bXDTJMGSMRYF4WmuRbiDz9IgIGp6rQjrF8CtfNxxzlelV7sjzjW7cN
+        +OXdHo3nXDZxLeq6CdgMmT2Kuj+nBlAmZbdy86cXedIedvWCF794xGIDs5J2hbA7n5A1mT2monYeX8vz
+        9Lmwa66XjyP8eQqIN3MwIRu67J5dLue5aikmv1brxjqOnAesVn9jL1Iv16grnZplDgj3vOv2MZMRn2HQ
+        Wt5pLBKLsdluGseE+VqBuQML44XoI2GQ2mPAo8CTwPMAg9d6ATroTAmHXV5St1z/wKCb8vl9b0LWp2Ky
+        SF2t1CYb8LkGBLkLhJlY0EvHBSt18lF2X67aySiHqNxbPGKRFIjLLqjA6K5Q4RHqlP4QbqdIMjH4jGsS
+        G3QdN0OhtcRJUG3r7e1mBGNYdEL+WlD5/CZU2nbZpO4QGJGoKhuiViZpDcjw4z3AVmBjBpQTXz6+hDmJ
+        R43OdQde9DAsK02RomkszpQn5O+OGy4pe6CqP2csGDUQN1zjwgCSiVsazQIeAbRJbzroeMzfeI7XML0P
+        4OaxI7QXBbBk4U2Oy+g3sWgbsoszNNYL+M71mZcBjNrlnvb6l4uy0i+kYFTvhcCXgPvM5MH8sbTM9bwu
+        JrE9J1a/vvI0np02Apd/GQT4HL5re3JScLcDw24Nw7X6e3kNr2WqBqYAXfrrqQE4GHBaRj+vT8pOY1dH
+        Qs0ATgc4VaKR52wcfxt4JlNH/jkCj/kbz+nTyfhyOdBrlB/9j+hqC95KE/YeIxuMbchpPlfTOqzMcKbY
+        DDaVlN6d+TYEdlgxrvLl0JUFegcQA7hvu1N7gvdoaRwO/gwMz29p5CrFCIyEPDVQKxfp60tSMRyF2klL
+        F+CgJw+58Bpeq6V2HLQAXFCRJdMaObNgYmFPjRUmZaG8x+ue7fiQ/by+kClorVV2xIJNlSKpquRk/b2c
+        c+S/OTC9E1iQh/CsSMd7tUSirtPnlV7b+FkuQ1ttV1a/zkNujyOs3IxU+jd/ZgEy4T36xL0zRmgYvGgr
+        nNa1QabTFLGalNaT2jGx1hgLmd6/aprqVzErKLZJhE11o9l+BNzGiEuRqOoZW+1UUxmv/1gmL3anl5rl
+        l16NTXfELIy25sJv9gsF202qWyUxSgM7v+D7Mi4Iwfm71SE7R2UxWYjf/6Bel5AngdXqwAAx/qrR3SHb
+        SFoVHJjcdcecYVnwmD4m+pqYd6N8GRvInYOyZ5GKdeFCBj2pqLkKlQnv1RIHQiPyoXsi3ym5uCzPJ8zZ
+        lcb6qlkhOZLhTikNMkNtBGxTrdo2nKROrywxFRArrKXfuxCilv/Dhtckq9v2IP+cjUwZsK6UQ61crO5L
+        QQJzAMHBSp1cjnNnmBGK+bIL5ChXS0kPyqttgdCJvEwnj9O+r0kg/O/QZqvwYryScTZvxm8r0IY/wUtw
+        fj6k4n6xrmwsFtJSwJpw05vq53R4coj8QZ0grWbNnbyxzEOfFuMLh+lO8hita5ehnGfoCs9Biduy3JbJ
+        jxp8U6780g7XceofJKQ/z3WyGOMw8r7OIPuCvrqpMOca6eCcZmC4FwRgHvrEl2Cu1dvqQcO5kYPx3nko
+        j34d34selI95aIny1oz4fP7ZI9+68U+oPPuXjXwfanYdVb62mYieBMXQWMz/NIDawE2Z/bj3u4aXIo+t
+        oGzrZDbNwj306TN0Wyf6ydh1xw3lLrmvtI/cVtZoY5VcJR0UyGuN5eDRwbqUzjy3xOKoMCjpNg/kwTzC
+        BAl45ccKgjA5onP7ouk3xguCTFzVoVDPO6d0gpa88mMFTS4F18fpXGGgdrQzSM0Lz3vBDRHEG51ENwSx
+        /vo6FTpXOOpy+T/BU08j9jQC2wAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="pictureBox5.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAJYAAAA8CAYAAACEhkNqAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAACwwAAAsMAT9AIsgAAAAGYktHRAD/AP8A/6C9p5MAAAAHdElNRQfaDA0MIwGIXx6m
+        AAAAHWlUWHRDb21tZW50AAAAAABDcmVhdGVkIHdpdGggR0lNUGQuZQcAAAv/SURBVHhe7V0JkBxVGf5n
+        j9nsMTuzs7sDwagrEkruSCJioRIiglhSIpSYGEAtCCalpVAeUJoYKTFqBMuyMBqMJh4JQaMGOUISNJYk
+        IkcKiMYc7G42IQdHTsiaTTY77ff1TG/19HZPT093z/TO9Kv6aq7u1//73/f+997//vdGJEyhBkINhBoI
+        NRBqINRAqIFQA6EGQg2EGvBRAxHk3QTwlSkBfAy4H3ga2Av0A8eBQSANKFkM4fUg0AtsswB/2w10A8uB
+        9/tYljDrgGmApIoDXwP2G8ijkcjLVxJSIygJ2wf8C1gB3A3cBLwHSAAa4QOmslCcfBqI4sdzgd8C/wO8
+        JI/bvDTi8fU/wOSwKkeHBmgNZgNHAkYoK0LSyi0FukaHeitTyjoUqzlP0fjbHcCxUUIqPdlegcz3AmdX
+        ZtUFv1RWYxNWyBKAA3G77orjnx3AFoDvScTDAAfjLwEYsDdsr5FUd42M66mVd/bWydk7Mpiwo14u6quT
+        C16uk/MO1Mr443VyvpLBBPUV36mokdOAsUpEWiFPxE4m/k7r9W9gYvCrofIkrLEoEgfIrBjLCoxI87Fm
+        +frKTS+cs0fxIfX1jRucN/vOoynZdbBTtr7RJn86FJfFR5vlKwP1MvFEROIYVxVEMJaBBL+m8qovmCWq
+        h1hnGUTrwue5gN5dkEMuEOpAi8z7ow9ccpTlhn9c3N8mKze2yOy9Ubl0CHLZWbFXQ+tVGiJOwmM6s49q
+        wev8bDdmWkGouNdjMn+5o9ov4cXt8uTWBrn6iA3BSK7JpVFvdT6lAcWmGyEB3Arss+n2BhLywC9LyJOi
+        H5WUtbsa5Kp0HoK9gbLeALAxhclDDWgDdnZ73wMOmZMqog6UMXA+mpAH1xZd02W6sUlmDuYhF7v6J4F3
+        eajXMKtsi30dryZjKRIqjhnZhUqLfGd3mXjhyWPb5CHMQs84kcca05MfuiRcNInTcO+XgOcBS0VHpEUZ
+        I9cpbfKYJxUbhExmTV+wv1luH6C7woRgbFhPAFxZ4NAgTAVqgOOIm4Fd5tYp405gl9EgHwWhVip/W3tp
+        EPjguQwx+f6QBbmogwPALQXqtCovo7f8g8AioAew9ZqTVM1yZ9rzmgxghm3yaJqOV1pmE+tFXXEik6hK
+        5lgUmpbpEmA1cNJEaSMUGZGE0iifUzplSwAp4K9IcVmievNNCEan8Crg/GonF8dO3wIsZna5nnOSqV4+
+        gEH5bCUp6/ytvYDnnpJ9GE9OMyOXNu46pVrIpV/Xey8K/RjAtTkbj3MUrfN0KPFTSqv8HBZq64mA13lJ
+        xYvJd60G9T+tBmK16wrJRVWOnyyXXThIxTKH0iSzQKafKB2ysaSVNZoelpJXVMtl0UDX4fuKjWalpXpH
+        llgs5MtWVoqEorugVRYo7fL0aKrfssraKTssGyl0zeBGRs0yeraiIlU5S2HsVBfA0BTT1kVS0Tp1Ss9Q
+        WWtplD4cztR85KLOOSki6Ad8DVgMjGrnalvWHFuSKipT0klZ3T9K6zQwYsPaD1i4Iqy6SpKRYNwa9wEw
+        /otLRX8BGHkbWOKxCxwLbDazVAieg2Pz49XnL/CRio1yY79DcuUjHSdXtG6MB6OHPzBk4yIpV+JHBN2R
+        VK1y3yEfdVy1WbfLU8cZrSpSaxfj5fR3WjdGV6wH7gGuBt4GlHw5iQNGuhVyCkBSIf7oWNXWfIkKnpCl
+        r42R69HNeU4w1qfWhfbh/a+Aa4GS+c4m4GE5yzIkVUx+WBVLMCXij+1jUrJ3C1Yoeltkbner/HgA8V4n
+        m+TWNMe2UblSjcVnvZgNVxx+x4kBN4EkAF/TQqNg2Hhgq4jwgtJqYMbUhf2dsr0/LkuPxeQHQ1GZnK6V
+        LjdE42SAO8w5DPLFiu3UE4utIi6/Ka3WwqcVpYFO6d0Pf+LhBvkEQnbGIibfdOHbjnwcW/NYgqleW7Gc
+        QTtNLnathN1gUVVd3ps65IX/Ysz2KnYZHYnKZcdBNDu/mZ50h0Gsr3o5yM/Z1zdGppdXO+HTPdMADMSu
+        hCx7ExGuiBMraHz2Joh1pRcDL4bC5BCrTR7xrGBhRsHRAPdQxuSeg43yWTsrxghg15tAuD1ruCuskVOw
+        XNMbHG2EkviiAQQMwMVxrVX4OIl3lVurNUc/cG+UG3wpSJhpMDWAiAueOWY2uH/ALbH+qWXMGUVc7g+m
+        BkKpfNMA6v+oCbl4JoarxFPwVMZyNtghz/lWgDDjYGoAS3ZmgQcM43GVhj3uOJElHF8Fs+59lapDNjOg
+        09gdcmHbVRoOO8YSAvxX+zwpRE/P29V9gwxTxkwEmJeDZvkGIk8/j4DBqSq099g+hevmY41yvWo9Kc/4
+        tm2DnggV0Ewun7gWZX0R2ASdPYyyP6MGUKZkt3LzJxeVRGp48f0jFiuYhXSbkrIme8ZUzM7ja/k7fS7s
+        mhvkIwh/ngLizTyZlA3dbmULyv3ctRSXX6tlYxlHrgPWqt+xF2mQa9SdTi0yB4R71pci8BkGq+WdxSKx
+        GJvtJpkwXxOYJ7AwXog+EgapPQI8DDwOPAsweK0PoIPOlHA45SV9y/W/OOlGvlLfm5T16bgsUncrtcsG
+        vK4BQe4CYSYW1ei4YSUqH4J12+xpUWJyr3/EIikQl12UwOiuUOAR5pT+EB6nSDIx+Ix7Eht1HTdDobXE
+        RVDt6O3tZgRjWHRS/lqUfOW4id0bZY5ITNUNUS+TtApk+PEeYCuwMQvqiY2PjTAv8WjRue/Aix6GuuFQ
+        xDeLxZXypPzdcR2kZA9M9WeMgtEC8cA1bgwgmXik0SzgIUBb9KaDju/5HX/jNUzvBnh47AjrRQUsWXiT
+        YxlLfQPHhuziDJX1HD5zf+blAKN2eaa9vnFRV/qNFIzqvQj4AnCfmT6YP7aWuV7XxSK258Qa0Beeg2en
+        idu/DAp8Bp+1MzmpuNuBYbeG4Vr9vbyG1zLVAlOAbv31tACcDAQ5pWSnsasjoWYAZwBcKtHIcw7efxN4
+        KltG/jkC3/M7/qZPp+LDFUCfUX/0P6KrLfooTYz3GNlgrEMu87la1mFhhjPFYbDplPTtLLTicMKKcZcv
+        p64U6C0AI1N5brvT8QTv0dI4vPkzMLy+pZEriBEYSXlisF4u1peXpGI4Cq2Tli7Em94C9MJreK2WOvCm
+        FeCGihyd1slZRRMLZ2qsMJGF+h6ve7bjt+zn9UKmYbVW2RELY6o0SVUjp+rv5Zoj/82B6a3AggKUZ0U6
+        3qslEnWdPq/M3sZPcxvaajtZS/U79PYowsrNSKVv+TOL0Anv0SeenTHCwqChrXBa1kaZzqGI1aK0ntSO
+        ibXGKGTm/Kppql/FLOGYRIypbjQ7j4DHGHErEk09Y6udWirj9R/O5sXu9DKz/DK7semOmIXZ1lz4zX6m
+        4LhJ9agkRmng5Bd8XsYNIfj9bnXKzllZXBbi+z+o1yXlcWC1OjFAjL/qU+qUbSStCk5M7rpjzrAq+J4+
+        JvqamHeTfBEHyJ0L2XNIxbJwI4OeVLRcxeqE92qJE6ER+dA9UeiSXEKWFxLm7MpifdlMSM5keFJKo8xQ
+        KwHHVKtjGy5SZ3aWmCqIBdbS710oUcv/QUMzyem2Pcg/byVTBywr9VAvl6jnUpDAnEBwshKVK/DbmWaE
+        Yr7sAjnL1VLKA3m1IxC6kJfp4nHG9zUJhP8d6mwVGsZLWWfzJny3AnX4IzSCCwohFc+LdTXGopCWCtaU
+        mzlUP6/Dk1Pk9+kUabVq7qTFMg99WowPnKY7yaNc1y6DnGfqhOekxK0st2XzowV/MV9+GYfrOPUPEjKv
+        5znZjHEYeV9n0H1RH90UmGuNdHBOMzDcCwIwD31iI5hr1Vo9qDg3ejDeOw/y6PfxPe+BfMxDS9S3Nogv
+        5J89Ci0b/4TKs3/ZKPShZtfR5GuHiehJ4IfFYv6nA7QGbmQuxb3fNjSKAo6Csi2T2TILz9Cnz9Btmegn
+        Y9edMMgduI8cH7ktrHGMFbhCOhDIa4vl4NGVdSmdeW6JxVlhpaTbPNAH8wgTNOCVH6sSlMkZnduGpj8Y
+        rxJ04qoMxXreuaRTackrP1al6aXo8jhdK6yoE+0MWvPC8150RVTijU6iGyqx/PoyFbtWWHa9/B9EfwgZ
+        bSC8TwAAAABJRU5ErkJggg==
+</value>
+  </data>
 </root>
